--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "my_web",
     "version": "1.0.0",
     "description": "create my own web",
-    "main": "./src/index.js",
+    "main": "./index.js",
     "scripts": {
-        "start": "nodemon --inspect src/index.js",
+        "start": "nodemon --inspect index.js",
         "comcss": "node-sass --watch src/resource/scss/ -o src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
