--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express-handlebars": "^5.3.3",
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
+        "mongoose": "^5.13.7",
         "node-sass": "^6.0.1"
     },
     "devDependencies": {
