--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "create my own web",
     "main": "./index.js",
     "scripts": {
-        "start": "nodemon --inspect index.js",
+        "start": "node index.js",
         "comcss": "node-sass --watch src/resource/scss/ -o src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -27,9 +27,9 @@
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
         "mongoose": "^5.13.7",
-        "node-sass": "^6.0.1"
+        "netlify-lambda": "^2.0.14",
+        "node-sass": "^6.0.1",
+        "serverless-http": "^2.7.0"
     },
-    "devDependencies": {
-        "nodemon": "^2.0.12"
-    }
+    "devDependencies": {}
 }
