--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "my_web",
     "version": "1.0.0",
     "description": "create my own web",
-    "main": "./index.js",
+    "main": "./src/index.js",
     "scripts": {
-        "start": "node src/index.js",
+        "start": "nodemon src/index.js",
         "comcss": "node-sass --watch src/resource/scss/ -o src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -29,6 +29,7 @@
         "mongoose": "^5.13.7",
         "netlify-lambda": "^2.0.14",
         "node-sass": "^6.0.1",
+        "nodemon": "^2.0.12",
         "serverless-http": "^2.7.0"
     },
     "devDependencies": {}
