--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./src/index.js",
     "scripts": {
         "start": "nodemon src/index.js",
-        "comcss": "node-sass --watch src/resource/scss/ -o src/public/css/",
+        "comcss": "node-sass --watch ./src/resourse/scss/ -o ./src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
