--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
         "mongoose": "^5.13.7",
+        "mongoose-delete": "^0.5.3",
+        "mongoose-slug-generator": "^1.0.4",
         "netlify-lambda": "^2.0.14",
         "node-sass": "^6.0.1",
         "nodemon": "^2.0.12",
