--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
+        "glob-parent": "^6.0.1",
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
         "mongoose": "^5.13.7",
