--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     },
     "homepage": "https://github.com/goddie9x/my_own_web#readme",
     "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "connect-flash": "^0.1.1",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
+        "express-session": "^1.17.2",
+        "express-validator": "^6.12.1",
         "glob-parent": "^6.0.1",
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
@@ -33,6 +38,8 @@
         "netlify-lambda": "^2.0.14",
         "node-sass": "^6.0.1",
         "nodemon": "^2.0.12",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "serverless-http": "^2.7.0",
         "socket.io": "^4.1.3"
     },
