--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "glob-parent": "^6.0.1",
+        "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongodb": "^4.1.0",
         "mongoose": "^5.13.7",
