--- a/package.json
+++ b/package.json
@@ -28,23 +28,26 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "express-handlebars": "^5.3.3",
+        "express-handlebars": "^5.3.4",
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "glob-parent": "^6.0.1",
         "jsonwebtoken": "^8.5.1",
+        "merge-recursive": "0.0.3",
         "method-override": "^3.0.0",
-        "mongodb": "^4.1.0",
-        "mongoose": "^5.13.7",
-        "mongoose-delete": "^0.5.3",
+        "mongodb": "^4.1.2",
+        "mongoose": "^6.0.7",
+        "mongoose-delete": "^0.5.4",
         "mongoose-slug-generator": "^1.0.4",
         "netlify-lambda": "^2.0.14",
         "node-sass": "^6.0.1",
-        "nodemon": "^2.0.12",
+        "nodemon": "^2.0.13",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "serverless-http": "^2.7.0",
-        "socket.io": "^4.1.3"
+        "short-id": "0.1.0-1",
+        "socket.io": "^4.2.0",
+        "valid-url": "^1.0.9"
     },
     "devDependencies": {}
 }
