--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "passport-local": "^1.0.0",
         "serverless-http": "^2.7.0",
         "short-id": "0.1.0-1",
+        "shortid": "^2.2.16",
         "socket.io": "^4.2.0",
         "valid-url": "^1.0.9"
     },
