--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     },
     "homepage": "https://github.com/goddie9x/my_own_web#readme",
     "dependencies": {
+        "@ckeditor/ckeditor5-ckfinder": "^29.2.0",
         "bcrypt-nodejs": "0.0.3",
         "connect-flash": "^0.1.1",
+        "connect-multiparty": "^2.2.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
@@ -39,15 +41,18 @@
         "mongoose": "^6.0.7",
         "mongoose-delete": "^0.5.4",
         "mongoose-slug-generator": "^1.0.4",
+        "multer": "^1.4.3",
         "netlify-lambda": "^2.0.14",
         "node-sass": "^6.0.1",
         "nodemon": "^2.0.13",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "serverless-http": "^2.7.0",
+        "sharp": "^0.29.1",
         "short-id": "0.1.0-1",
         "shortid": "^2.2.16",
         "socket.io": "^4.2.0",
+        "uuid": "^8.3.2",
         "valid-url": "^1.0.9"
     },
     "devDependencies": {}
