--- a/package.json
+++ b/package.json
@@ -45,23 +45,13 @@
         "node-sass": "^6.0.1",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "serverless-http": "^2.7.0",
         "shortid": "^2.2.16",
         "socket.io": "^4.2.0",
         "valid-url": "^1.0.9"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.5",
-        "@babel/preset-env": "^7.15.6",
-        "@babel/preset-react": "^7.14.5",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^6.3.0",
         "netlify-lambda": "^2.0.14",
-        "nodemon": "^2.0.13",
-        "style-loader": "^3.3.0",
-        "webpack": "^5.55.1",
-        "webpack-cli": "^4.8.0"
+        "nodemon": "^2.0.13"
     }
 }
