--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "multer": "^1.4.3",
         "multer-storage-cloudinary": "^4.0.0",
         "node-sass": "^6.0.1",
+        "nodemailer": "^6.7.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "serverless-http": "^2.7.0",
