--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "my_web",
     "version": "1.0.0",
     "description": "create my own web",
-    "main": "./index.js",
+    "main": "./src/index.js",
     "scripts": {
         "start": "node src/index.js",
-        "comcss": "node-sass --watch src/resource/scss/ -o src/public/css/",
+        "nodemon": "nodemon src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -13,23 +13,45 @@
         "url": "git+ssh://git@github.com/goddie9x/my_own_web.git"
     },
     "keywords": [
-        "my_own_web"
+        "my_own_web_api"
     ],
     "author": "HoangTam",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/goddie9x/my_own_web/issues"
+        "url": "https://github.com/goddie9x/my_own_web_api/issues"
     },
-    "homepage": "https://github.com/goddie9x/my_own_web#readme",
+    "homepage": "https://github.com/goddie9x/my_own_web_api#readme",
     "dependencies": {
-        "express": "^4.17.1",
-        "express-handlebars": "^5.3.3",
+        "@pakjiddat/toc": "^1.1.0",
+        "axios": "^0.24.0",
+        "bcrypt-nodejs": "0.0.3",
+        "cheerio": "^1.0.0-rc.10",
+        "cloudinary": "^1.27.0",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.2",
+        "express-validator": "^6.12.1",
+        "glob-parent": "^6.0.1",
+        "jsonwebtoken": "^8.5.1",
+        "merge-recursive": "0.0.3",
         "method-override": "^3.0.0",
-        "mongodb": "^4.1.0",
-        "mongoose": "^5.13.7",
-        "netlify-lambda": "^2.0.14",
-        "node-sass": "^6.0.1",
-        "serverless-http": "^2.7.0"
+        "mongodb": "^4.1.2",
+        "mongoose": "^6.0.7",
+        "mongoose-delete": "^0.5.4",
+        "mongoose-slug-generator": "^1.0.4",
+        "multer": "^1.4.3",
+        "multer-storage-cloudinary": "^4.0.0",
+        "node-cron": "^3.0.0",
+        "nodemailer": "^6.7.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "serverless-http": "^2.7.0",
+        "shortid": "^2.2.16",
+        "socket.io": "^4.2.0",
+        "valid-url": "^1.0.9"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "nodemon": "^2.0.13"
+    }
 }
